--- a/styles.css
+++ b/styles.css
@@ -1,23 +1,29 @@
-header {
- display: flex;
- align-items: center;
- justify-content: space-between;
- background-color: #1F2937;
- color: #f9faf8;
- font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
- width: auto;
- padding: 32px;
+html {
+ height: 100vh;
+ width: 100vw;
 }
 
-footer {
+body {
+ margin: 0;
+ padding: 0;
+}
+
+/* Header */
+header {
  display: flex;
  align-items: center;
  justify-content: center;
  background-color: #1F2937;
  color: #f9faf8;
- margin: 0;
- padding: 14px 0px;
- font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+ font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+ height: 5em;
+ width: 100vw;
+}
+
+.header-content {
+ display: flex;
+ justify-content: space-between;
+ width: 80vw;
 }
 
 ul {
@@ -41,46 +47,56 @@ a {
  color: black;
 }
 
-.one {
+/* Section One - Awesome */
+.section-one {
  display: flex;
  align-items: center;
- justify-content: space-evenly;
+ justify-content: center;
  background-color: #1F2937;
- font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
- width: initial;
- padding: 32px;
+ font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+ height: 60vh;
+ width: 100vw;
 }
 
-.one-left {
+.sect-one-content {
+ display: flex;
+ align-items: center;
+ justify-content: space-between;
+ gap: 5em;
+ width: 80vw;
+}
+
+.section-one-left {
  display: flex;
  align-items: center;
  justify-content: flex-start;
  flex-wrap: wrap;
+ gap: 1em;
+ height: 12em;
+ width: 25em;
  color: #E5E7Eb;
  font-size: 18px;
- margin-right: 25px;
- max-width: 500px;
 }
 
-.one h2 {
+.section-one-right {
+ color: black;
+ display: flex;
+ align-items: center;
+ justify-content: center;
+ height: 12em;
+ width: 25em;
+ background-color: white;
+
+}
+
+.section-one h2 {
  font-size: 48px;
  font-weight: bolder;
  color: #f9faf8;
  margin: 0;
 }
 
-.one-right {
- color: black;
- width: 400px;
- height: 150px;
- display: flex;
- align-items: center;
- justify-content: center;
- margin-left: 25px;
- background-color: white;
-}
-
-.one-btn {
+.section-one-btn {
  background-color: #3882f6;
  border-radius: 6px;
  color: #f9faf8;
@@ -89,24 +105,27 @@ a {
  flex: 0 1 auto;
 }
 
-.two {
+/* Section Two - Boxes */
+.section-two {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  background-color: #f9faf8;
- font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+ font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-.two h3 {
- font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+.section-two h3 {
+ font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
  font-size: 36px;
  font-weight: bold;
  color: #1F2937;
+ margin-top: .5em;
 }
 
 .boxes {
  display: flex;
+ margin-bottom: .5em;
 }
 
 .box {
@@ -117,25 +136,40 @@ a {
  margin: 1em;
 }
 
-.three {
+/* Section Three - Quote */
+.section-three {
  display: flex;
  flex-direction: column;
+ align-items: center;
  flex-wrap: wrap;
  background-color: #E5E7Eb;
- font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+ font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
  font-style: italic;
  text-align: center;
  color: #1F2937;
- padding: 18px;
+ width: 100vw;
 }
 
-.four {
+.quote-cont {
+ display: flex;
+ flex-direction: column;
+ width: 80vw;
+ padding: 3em;
+}
+
+.signature {
+ align-self: flex-end;
+}
+
+/* Section Four - CTA */
+.section-four {
  display: flex;
  align-items: center;
  justify-content: center;
  background-color: #f9faf8;
  color: #f9faf8;
- padding: 48px;
+ width: 100vw;
+ padding: 5em;
 }
 
 .container {
@@ -143,10 +177,14 @@ a {
  align-items: center;
  justify-content: space-between;
  background-color: #3882f6;
- width: 600px;
- padding: 0px 32px;
+ width: 80vw;
+ padding: 1em;
  border-radius: 6px;
- font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+ font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.cont-left h3,p {
+ margin: 0;
 }
 
 .cont-btn {
@@ -156,4 +194,16 @@ border-radius: 6px;
 color: #f9faf8;
 width: 100px;
 padding: 6px;
+}
+
+/* Footer */
+footer {
+ display: flex;
+ align-items: center;
+ justify-content: center;
+ background-color: #1F2937;
+ color: #f9faf8;
+ font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+ height: 5em;
+ width: 100vw;
 }
