--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,7 @@ header {
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
  height: 5em;
  width: 100vw;
+ padding: 0 5em;
 }
 
 .header-content {
@@ -48,6 +49,11 @@ a {
 }
 
 /* Section One - Awesome */
+section {
+ width: 100vw;
+ padding: 0 5em;
+}
+
 .section-one {
  display: flex;
  align-items: center;
@@ -106,6 +112,10 @@ a {
 }
 
 /* Section Two - Boxes */
+figcaption {
+ text-align: center;
+}
+
 .section-two {
  display: flex;
  align-items: center;
@@ -137,6 +147,7 @@ a {
  border-radius: 10%;
  margin: 1em;
 }
+
 
 /* Section Three - Quote */
 .section-three {
@@ -208,4 +219,5 @@ footer {
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
  height: 5em;
  width: 100vw;
+ padding: 0 5em;
 }
