--- a/styles.css
+++ b/styles.css
@@ -16,20 +16,22 @@ header {
  background-color: #1F2937;
  color: #f9faf8;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
- height: 5em;
- width: 100vw;
- padding: 0 5em;
+ max-height: auto;
+ padding: 2em 5em;
 }
 
 .header-content {
  display: flex;
- justify-content: space-between;
+ justify-content: center;
  width: 80vw;
 }
 
 ul {
  display: flex;
+ flex-wrap: wrap;
+ align-self: center;
  list-style: none;
+ margin-left: auto;
 }
 
 a {
@@ -39,67 +41,75 @@ a {
 }
 
 .logo {
- display: flex;
- align-items: center;
- justify-content: center;
- height: 50px;
- width: 210px;
- background-color: #f9faf8;
- color: black;
+ width: 16em;
+ margin-right: auto;
+}
+
+.logo img {
+ width: 100%;
+ height: 6em;
+ position: relative;
 }
 
 /* Section One - Awesome */
-section {
- width: 100vw;
- padding: 0 5em;
-}
-
 .section-one {
  display: flex;
  align-items: center;
  justify-content: center;
  background-color: #1F2937;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
- height: 60vh;
- width: 100vw;
+ max-height: auto;
+ padding: 2em 5em;
 }
 
 .sect-one-content {
  display: flex;
  align-items: center;
- justify-content: space-between;
- gap: 5em;
+ justify-content: center;
  width: 80vw;
 }
 
 .section-one-left {
  display: flex;
  align-items: center;
- justify-content: flex-start;
+ justify-content: center;
+ flex-direction: column;
  flex-wrap: wrap;
- gap: 1em;
- height: 12em;
- width: 25em;
+ flex: 1 1 50%;
  color: #E5E7Eb;
- font-size: 18px;
+ height: auto;
+ max-width: auto;
+ gap: 1em;
 }
+
+.section-one-left h2, p, button {
+ flex: 1 1 50%;
+ flex-wrap: wrap;
+ height: auto;
+ align-self: flex-start;
+ margin: 0;
+}
+
 
 .section-one-right {
  color: black;
  display: flex;
  align-items: center;
  justify-content: center;
- height: 12em;
- width: 25em;
+ flex: 1 1 10%;
+ height: auto;
  background-color: white;
+}
 
+.section-one-right img {
+ width: 100%;
+ height: auto;
 }
 
 .section-one h2 {
- font-size: 48px;
+ font-size: 1.5em;
  font-weight: bolder;
  color: #f9faf8;
- margin: 0;
 }
 
 .section-one-btn {
@@ -114,6 +124,7 @@ section {
 /* Section Two - Boxes */
 figcaption {
  text-align: center;
+ margin-top: 1em;
 }
 
 .section-two {
@@ -123,6 +134,7 @@ figcaption {
  flex-direction: column;
  background-color: #f9faf8;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+ padding: 2em;
 }
 
 .section-two h3 {
@@ -137,6 +149,7 @@ figcaption {
  display: flex;
  justify-content: center;
  align-items: center;
+ flex-wrap: wrap;
  margin-bottom: .5em;
 }
 
@@ -145,7 +158,14 @@ figcaption {
  width: 100px;
  border: 3px solid #3882f6;
  border-radius: 10%;
- margin: 1em;
+ margin-left: auto;
+ margin-right: auto;
+ margin-bottom: 1em;
+}
+
+.box img {
+ width: 100%;
+ height: 100%;
 }
 
 
@@ -160,7 +180,6 @@ figcaption {
  font-style: italic;
  text-align: center;
  color: #1F2937;
- width: 100vw;
 }
 
 .quote-cont {
@@ -181,7 +200,6 @@ figcaption {
  justify-content: center;
  background-color: #f9faf8;
  color: #f9faf8;
- width: 100vw;
  padding: 5em;
 }
 
@@ -189,14 +207,22 @@ figcaption {
  display: flex;
  align-items: center;
  justify-content: space-between;
+ flex-wrap: wrap;
  background-color: #3882f6;
  width: 80vw;
  padding: 1em;
  border-radius: 6px;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+ gap: 1em;
 }
 
-.cont-left h3,p {
+.cont-left {
+ display: flex;
+ flex-direction: column;
+ gap: .5em;
+}
+
+.cont-left h3 {
  margin: 0;
 }
 
@@ -218,6 +244,11 @@ footer {
  color: #f9faf8;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
  height: 5em;
- width: 100vw;
  padding: 0 5em;
+}
+
+footer p {
+ text-align: center;
+ margin-top: auto;
+ margin-bottom: auto;
 }
